# advent-of-code-2023

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENCE  README.md  conftest.py  pyproject.toml
.github/workflows/: test.yml
src/aoc/: base.py  base_tests.py  data_structures.py  input_providers.py  main.py
src/aoc/day_00/: __init__.py  test_solution.py
src/aoc/day_01/: __init__.py  test_solution.py
src/aoc/day_02/: __init__.py  test_solution.py
src/aoc/day_03/: __init__.py  test_solution.py
src/aoc/day_04/: __init__.py  test_solution.py
src/aoc/day_05/: __init__.py  test_solution.py
src/aoc/day_06/: __init__.py  test_solution.py
src/aoc/day_07/: __init__.py  test_solution.py
src/aoc/day_08/: __init__.py  test_solution.py
src/aoc/day_09/: __init__.py  test_solution.py
src/aoc/day_10/: __init__.py  test_solution.py
src/aoc/day_11/: __init__.py  test_solution.py
src/aoc/day_13/: __init__.py  test_solution.py
src/aoc/day_14/: __init__.py  test_solution.py
src/aoc/day_17/: __init__.py  test_solution.py
src/aoc/day_18/: __init__.py  test_solution.py
src/aoc/day_23/: __init__.py  test_solution.py
src/aoc/day_24/: __init__.py  test_solution.py
src/aoc/templates/day_template/: __init__.py
src/aoc_solutions/2023/day_00/: __init__.py  test_solution.py
templates/day_template/: test_solution.py
tests/: test_cli.py
